--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -63,6 +63,10 @@ sites:
     url: https://latency-test.skk.moe/endpoint
     headers:
       - "User-Agent: curl/8.2.1 (https://status.skk.moe)"
+  - name: latency-test.lab.skk.moe
+    url: https://latency-test.skk.moe/endpoint
+    headers:
+      - "User-Agent: curl/8.2.1 (https://status.skk.moe)"
   - name: disqusjs.skk.moe
     url: https://disqusjs.skk.moe
     headers:
